5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1723_2495.log
== TEST (2019-05-09 10:05:20) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=(-1)):
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 19
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:06:03) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=(-1)):
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
print(mensagem)
	
	# Inputs seguintes
	

-- ERROR:
File "XXXX", line 19
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:06:14) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=(-1)):
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
print(mensagem)
	
	# Inputs seguintes
	

-- ERROR:
File "XXXX", line 19
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:09:24) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num<=-1):
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
print(mensagem)
	
	# Inputs seguintes
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:09:40) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
print(mensagem)
	
	# Inputs seguintes
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:16:15) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))
c=0
# Laco de repeticao
while (num!=-1):
	c= c + 1
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
print(mensagem)
	
	# Inputs seguintes
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:16:55) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))
c=0
# Laco de repeticao
while (num!=-1):
	
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	c = c+1
print(mensagem)
	
	# Inputs seguintes
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:17:18) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))
c=0
# Laco de repeticao
while (c!=-1):
	
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	c = c+1
print(mensagem)
	
	# Inputs seguintes
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:18:25) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))
c=0
# Laco de repeticao
while (c!=-1):
	
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	c = c+1
print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 20
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:20:33) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))
c=0
# Laco de repeticao
while (num=-1):
	
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	c = c+1
print(mensagem)
	
	# Inputs seguintes

-- ERROR:
File "XXXX", line 9
    while (num=-1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:20:46) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))
c=0
# Laco de repeticao
while (num > -1):
	
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	c = c+1
print(mensagem)
	
	# Inputs seguintes

-- ERROR:
File "XXXX", line 9
    while (num=-1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:23:21) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))
c=0
# Laco de repeticao
while (num > -1):
	
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	   c = c+1
print(mensagem)
	
	# Inputs seguintes

-- ERROR:
File "XXXX", line 16
    c = c+1
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:23:33) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))
c=0
# Laco de repeticao
while (num > -1):
	
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
		c = c+1
	else:
		mensagem = "IMPAR"
	   
print(mensagem)
	
	# Inputs seguintes

-- ERROR:
File "XXXX", line 16
    c = c+1
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:25:25) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))
c=0
# Laco de repeticao
while (num > -1):
	
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	   
   print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 19
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:25:30) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))
c=0
# Laco de repeticao
while (num > -1):
	
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	   
   print(mensagem)
	
	# Inputs seguintes
   num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 19
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:26:08) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))
c=0
# Laco de repeticao
while (num > -1):
	
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	   
   print(mensagem)
	
	# Inputs seguintes
   num = int(input("Digite um numero: "))
-- EXECUTION TIME:
0.198692
-- ERROR:
  File "/home/codebench/codes/1723/2495/main.py", line 18
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:26:17) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	   
   print(mensagem)
	
	# Inputs seguintes
   num = int(input("Digite um numero: "))
-- EXECUTION TIME:
0.154136
-- ERROR:
  File "/home/codebench/codes/1723/2495/main.py", line 18
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:26:17) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	   
   print(mensagem)
	
	# Inputs seguintes
   num = int(input("Digite um numero: "))
-- EXECUTION TIME:
0.143514
-- ERROR:
  File "/home/codebench/codes/1723/2495/main.py", line 18
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:27:00) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	   
   print(mensagem)
	
	# Inputs seguintes
   num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 18
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:27:20) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	   
print(mensagem)
	
	# Inputs seguintes
   num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 21
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:27:24) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	   
   print(mensagem)
	
	# Inputs seguintes
   num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 18
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:28:02) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >-1):
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
   print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 16
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:28:21) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >-1):
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
   print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 16
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:29:15) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
   print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.13534
-- ERROR:
  File "/home/codebench/codes/1723/2495/main.py", line 16
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:31:19) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:31:37) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:31:46) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.149157
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
